content + collapses fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -281,6 +281,12 @@ main {
                 font-size: 1.1em;
                 text-transform: uppercase;
                 font-weight: 500;
+                &.collapsed {
+                    &:after {
+                        display: block;
+                        content: "\25BC";
+                    }
+                }
             }
         }
         .card-body {
